# momiweather

./: CMakeLists.txt  Main.qml  README.md  WeatherItem.qml  main.cpp
